mb/jvm/compiler/InterfaceCalls/testAC2 - assert(predicate_proj == 0L) failed: only one predicate entry expected

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 8, 9
    • Component/s: hotspot
    • b64
    • x86, x86_64, sparc_64
    • linux, solaris, windows
    • Verified

        Failed in compiler nightly

        # Internal Error (/opt/jprt/T/P1/181452.vlivanov/s/hotspot/src/share/vm/opto/ifnode.cpp:243), pid=26604, tid=16
        [2015-04-22T09:16:49.88] # assert(predicate_proj == 0L) failed: only one predicate entry expected

              Assignee:
              Roland Westrelin
              Reporter:
              Bharadwaj Yadavalli (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: