8078426: mb/jvm/compiler/InterfaceCalls/testAC2 - assert(predicate_proj == 0L) failed: only one predicate entry expected

Split if finds predicates on several incoming paths when unswitched's loops are optimized out

Reviewed-by: kvn